--- a/笔记/linux/6备份.md
+++ b/笔记/linux/6备份.md
@@ -28,6 +28,7 @@ dump
     -j              调用bzlib库压缩备份文件
     -W              显示允许被dump的分区备份等级及备份时间
     
+    dump -0uj -f xxxxxxxx.bak.bz2
 
 恢复
 restore
@@ -37,7 +38,10 @@ restore
     -r              数据还原
 
     -f              指定的备份文件
-
+    
+    restore -C -f xxxxxxxx.bak.bz2
+    
+    
 ```
 
 
