--- a/笔记/docker/5.dockerHarbor安装.md
+++ b/笔记/docker/5.dockerHarbor安装.md
@@ -27,6 +27,8 @@
           #certificate: /your/certificate/path
           #private_key: /your/private/key/path
 
+        harbor_admin_password: admin
+
 每六步：启动harbor
     ./install.sh
 
@@ -54,8 +56,16 @@
 
 
 
+第八步：
+    192.168.118.8
+        admin/admin
+        
+
+启动、停止：
+    docker-compose start
+    docker-compose stop
+    docker-compose down
+
+
 ```
 
-
-
-    
