--- a/笔记/docker/5.dockerHarbor安装.md
+++ b/笔记/docker/5.dockerHarbor安装.md
@@ -27,7 +27,7 @@
           #certificate: /your/certificate/path
           #private_key: /your/private/key/path
 
-        harbor_admin_password: admin
+        harbor_admin_password: Harbor12345
 
 每六步：启动harbor
     ./install.sh
