--- a/笔记/docker/5.dockerHarbor安装.md
+++ b/笔记/docker/5.dockerHarbor安装.md
@@ -67,5 +67,18 @@
     docker-compose down
 
 
+
+
+sudo tee /etc/docker/daemon.json <<-'EOF'
+{
+  "registry-mirrors": ["https://mjana484.mirror.aliyuncs.com"],
+  "insecure-registries": ["192.168.118.8:8082"]
+}
+EOF
+sudo systemctl daemon-reload
+sudo systemctl restart docker
+
+
+
 ```
 
