--- a/笔记/自动化测试/1环境安装.md
+++ b/笔记/自动化测试/1环境安装.md
@@ -15,10 +15,19 @@
 
 2.连接手机  ---  adb
 ```text
+
+    查询已连接的手机
+        adb devices
+                
     1. 通过USB
         
     2. 通过WIFI 
+        adb connect 192.168.xx.xxx:xxx
+        
 
+    测试
+        获取手机系统版本
+            adb shell getprop ro.build.version.release
 
 ```
 
