--- a/笔记/自动化测试/1环境安装.md
+++ b/笔记/自动化测试/1环境安装.md
@@ -22,6 +22,9 @@
     1. 通过USB
         
     2. 通过WIFI 
+        
+        adb forward --list
+        
         adb connect 192.168.xx.xxx:xxx
         
 
