--- a/笔记/linux/2基础命令.md
+++ b/笔记/linux/2基础命令.md
@@ -8,6 +8,28 @@
 ##  ls  ll  命令
 
 
+```text
+
+############   查看文件
+cat 
+
+tac
+
+tail -f  ""
+
+more ""
+
+
+######################   搜索文件
+
+
+
+
+
+
+
+```
+
 
 
 
