--- a/笔记/音频/0.基础知识.md
+++ b/笔记/音频/0.基础知识.md
@@ -14,7 +14,25 @@
 
 解复用
 
+=======================
+
+码率
+
+帧率
+
+
+
+
+=======================     视频流协议
+
+1. HTTP-FLV / WS-FLV
+2. RTMP
+3. HLS
+4. RTSP
+5. DASH
+
 
 
 ```
 
+![img.png](images/img.png)
