--- a/笔记/linux/2基础命令.md
+++ b/笔记/linux/2基础命令.md
@@ -15,12 +15,68 @@ cat
 
 tac
 
-tail -f  ""
+tail -f  xxx.txt
 
-more ""
+more xxx.txt
+
+less xxx.txt
 
 
 ######################   搜索文件
+
+find [搜索范围] [匹配条件]
+
+find /etc -name *xxxx.init
+find /etc -iname *xxx.init
+find /etc -size +204800
+find /etc -user root
+
+
+
+
+
+######################   权限
+所有者、所处组、其它人
+
+chown 所有者  文件
+chown root  xxx.txt
+
+chgrp 所处组 xxx.txt
+chgrp root  xxx.txt
+
+
+
+修改权限
+chmod 777 xxx.txt
+
+r   4
+w   2
+x   1
+
+
+
+####################  网络
+last  查看所有登录用户信息
+
+
+查看数据包经过的节点
+traceroute  baidu.com
+
+
+netstat
+
+-t   tcp协议
+-u   udp协议
+-l   监听
+-r   路由
+-n   显示ip和端口号
+
+netstat -tlun
+netstat -an
+netstat -rn
+
+
+
 
 
 
