--- a/笔记/keepalived/1.keepalived安装.md
+++ b/笔记/keepalived/1.keepalived安装.md
@@ -10,7 +10,7 @@
 
 下载 Keepalived 的安装包，可以在 Keepalived 的官方网站
 解压下载的安装包：
-        tar zxvf keepalived-x.x.x.tar.gz
+        tar -zxvf keepalived-x.x.x.tar.gz
         cd keepalived-x.x.x
 
 编译和安装 Keepalived：
