--- a/笔记/k8s/1.k8s安装.md
+++ b/笔记/k8s/1.k8s安装.md
@@ -26,33 +26,55 @@
             
             
     3. 关闭防火墙，这一步操作是为了防止在学习阶段由于防火墙造成的各种网络问题，生产环境跳过这一步，
-        sed -i 's/SELINUX=enforcing/SELINUX=disabled/g' /etc/selinux/config
-        setenforce 0
+        systemctl stop firewalld
         systemctl disable firewalld
-        systemctl stop firewall
+    
+    3.1 # 关闭selinux
+        sed -i 's/enforcing/disabled/' /etc/selinux/config  # 永久
+        setenforce 0  # 临时
+
 
     4. 关闭交换区
         swapoff -a
         vi /etc/fstab
         #swap一行注释
         #/dev/mapper/centos-swap swap swap defaults 0 0
-        
-        
-        
+       
+```
 
-    5.安装docker
-    
-    
-    6.
-    
-    
-        
-        
+#### 修改 docker源：
+```text
+yum install -y yum-utils
+yum-config-manager \
+--add-repo \
+http://mirrors.aliyun.com/docker-ce/linux/centos/docker-ce.repo
+yum makecache fast
+```
 
+#### 修改 kubernetes源：
+```text
+cat > /etc/yum.repos.d/kubernetes.repo << EOF
+[kubernetes]
+name=Kubernetes
+baseurl=https://mirrors.aliyun.com/kubernetes/yum/repos/kubernetes-el7-x86_64
+enabled=1
+gpgcheck=0
+repo_gpgcheck=0
+gpgkey=https://mirrors.aliyun.com/kubernetes/yum/doc/yum-key.gpg https://mirrors.aliyun.com/kubernetes/yum/doc/rpm-package-key.gpg
+EOF
 ```
 
 
 
+```text
+    5.安装docker
+      容器运行时
+    
+    6.安装kubeadm
 
 
 
+    kubeadm init
+        
+
+```
