--- a/笔记/docker/3.搭建本地Docker仓库.md
+++ b/笔记/docker/3.搭建本地Docker仓库.md
@@ -38,7 +38,7 @@ services:
 vi /etc/docker/daeon.json
 ```shell
 {
-"registry-mirrors" : [ "https://docker.mirrors.ustc.edu.cn" ],
+"registry-mirrors" : [ "https://6vrrj6n2.mirror.aliyuncs.com" ],
 "insecure-registries":["192.168.1.130:5000"]
 }
 ```
@@ -49,6 +49,12 @@ systemctl restart docker
 ```
 
 上传镜像
+
+登录docker 
+```shell
+docker login 192.168.1.130:5000 -u docker -p docker
+```
+
 容器打成镜像
 ```shell
 docker commit -m "说明文字" -a "作者" 容器ID 新的镜像名
