--- a/笔记/docker/3.搭建本地Docker仓库.md
+++ b/笔记/docker/3.搭建本地Docker仓库.md
@@ -33,6 +33,7 @@ services:
       - ./data:/var/lib/registry
 ```
 
+# 用Nexus做docker仓库
 
 二、配置仓库
 vi /etc/docker/daeon.json
@@ -56,9 +57,6 @@ docker login 192.168.1.130:5000 -u docker -p docker
 ```
 
 容器打成镜像
-```shell
-docker commit -m "说明文字" -a "作者" 容器ID 新的镜像名
-```
 打标签
 ```shell
 docker tag 本地镜像名 标签名
