--- a/笔记/k8s/1.k8s安装.md
+++ b/笔记/k8s/1.k8s安装.md
@@ -40,7 +40,26 @@
         #swap一行注释
         #/dev/mapper/centos-swap swap swap defaults 0 0
        
+
+       
+       
+       
 ```
+
+#### 5.#允许 iptables 检查桥接流量
+```text
+cat <<EOF | sudo tee /etc/modules-load.d/k8s.conf
+br_netfilter
+EOF
+
+cat <<EOF | sudo tee /etc/sysctl.d/k8s.conf
+net.bridge.bridge-nf-call-ip6tables = 1
+net.bridge.bridge-nf-call-iptables = 1
+EOF
+sudo sysctl --system
+
+```
+
 
 #### 修改 docker源：
 ```text
@@ -64,17 +83,91 @@ gpgkey=https://mirrors.aliyun.com/kubernetes/yum/doc/yum-key.gpg https://mirrors
 EOF
 ```
 
-
-
+#### 安装docker
 ```text
-    5.安装docker
-      容器运行时
-    
-    6.安装kubeadm
+sudo yum install -y yum-utils
+sudo yum-config-manager --add-repo http://mirrors.aliyun.com/docker-ce/linux/centos/docker-ce.repo
+
+yum install -y docker-ce-20.10.7 docker-ce-cli-20.10.7  containerd.io-1.4.6
+```
 
 
 
-    kubeadm init
-        
+
+
+#### 6.安装kubeadm
+```text
+yum install -y kubelet-1.23.16-0 kubeadm-1.23.16-0 kubectl-1.23.16-0 --disableexcludes=kubernetes
+sudo systemctl enable --now kubelet
+```
+
+#### 拉取docker 镜像
+```text
+#查看初始化所需的镜像
+kubeadm config images list
+
+#编辑文件
+pull_images.sh
+
+#!/bin/bash
+images=(
+registry.aliyuncs.com/google_containers/kube-apiserver:v1.23.17
+registry.aliyuncs.com/google_containers/kube-controller-manager:v1.23.17
+registry.aliyuncs.com/google_containers/kube-scheduler:v1.23.17
+registry.aliyuncs.com/google_containers/kube-proxy:v1.23.17
+registry.aliyuncs.com/google_containers/pause:3.6
+registry.aliyuncs.com/google_containers/etcd:3.5.6-0
+registry.aliyuncs.com/google_containers/coredns:v1.8.6
+)
+for pullimageName in ${images[@]} ; do
+docker pull $pullimageName
+done
+
+# 执行脚本拉取镜像
+sh pull_images.sh
+
 
 ```
+
+
+#### kubeadm init        
+```text
+===========================================================================================================
+初始化之后，会输出一个join命令，先复制出来，node节点加入master会使用。
+--image-repository registry.aliyuncs.com/google_containers 镜像仓库，离线安装需要把相关镜像先拉取下来
+--apiserver-advertise-address 集群通告地址
+--image-repository 由于默认拉取镜像地址k8s.gcr.io国内无法访问，这里指定阿里云镜像仓库地址
+--kubernetes-version K8s版本，与上面安装的一致
+--service-cidr 集群内部虚拟网络，Pod统一访问入口
+--pod-network-cidr Pod网络，与下面部署的CNI网络组件yaml中保持一致
+===========================================================================================================
+
+
+kubeadm init \
+  --apiserver-advertise-address=192.168.118.18 \
+  --image-repository registry.aliyuncs.com/google_containers \
+  --kubernetes-version v1.23.0 \
+  --service-cidr=10.96.0.0/12 \
+  --pod-network-cidr=10.244.0.0/16 \
+  --ignore-preflight-errors=all
+
+
+```
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
