--- a/笔记/k8s/1.k8s安装.md
+++ b/笔记/k8s/1.k8s安装.md
@@ -89,8 +89,18 @@ sudo yum install -y yum-utils
 sudo yum-config-manager --add-repo http://mirrors.aliyun.com/docker-ce/linux/centos/docker-ce.repo
 
 yum install -y docker-ce-20.10.7 docker-ce-cli-20.10.7  containerd.io-1.4.6
-```
 
+service docker start
+systemctl enable docker
+
+vi /etc/docker/daemon.json
+{
+"registry-mirrors": ["http://hub-mirror.c.163.com","https://registry.docker-cn.com","https://kxv08zer.mirror.aliyuncs.com"]
+}
+
+systemctl daemon-reload
+systemctl restart docker
+```
 
 
 
@@ -152,6 +162,76 @@ kubeadm init \
   --ignore-preflight-errors=all
 
 
+mkdir -p $HOME/.kube
+sudo cp -i /etc/kubernetes/admin.conf $HOME/.kube/config
+sudo chown $(id -u):$(id -g) $HOME/.kube/config
+
+
+```
+
+
+
+####  工作节点加入集群
+```text
+
+#默认token有效期为24小时，当过期之后，该token就不可用了。这时就需要重新创建token，可以直接使用命令快捷生成：
+kubeadm token create --print-join-command
+
+
+kubeadm join 192.168.118.18:6443 --token o7zvmu.683tkg2wpuyau0k8 \
+    --discovery-token-ca-cert-hash sha256:b287cec0ee3d2d02ac4e2ce91954e8e41f66f1db7b1993b19d6773ae77295c9a
+
+```
+
+
+
+#### 查看节点为
+```text
+# kubectl get nodes
+
+===============================================================
+NAME     STATUS     ROLES                  AGE     VERSION
+master   NotReady   control-plane,master   4m18s   v1.23.16
+node1    NotReady   <none>                 3m6s    v1.23.16
+node2    NotReady   <none>                 2m53s   v1.23.16
+===============================================================
+注：由于网络插件还没有部署，还没有准备就绪 NotReady，继续操作。
+ 
+```
+
+#### 部署容器网络 （master执行）
+```text
+#查看pod 网段
+cat /etc/kubernetes/manifests/kube-controller-manager.yaml | grep cluster-cidr=
+
+#把calico.yaml里pod所在网段改成kubeadm init时选项--pod-network-cidr所指定的网段，
+########################### 修改calico.yaml文件
+
+# 修改网段
+- name: CALICO_IPV4POOL_CIDR      #此处
+  value: "10.244.0.0/16"	
+
+# 修改网卡
+  - name: IP_AUTODETECTION_METHOD
+    value: "interface=ens33"
+
+```
+
+#### 下载镜像
+```text
+pull_calico_images.sh
+
+#!/bin/bash
+images=(
+docker.io/calico/cni:v3.22.1
+docker.io/calico/pod2daemon-flexvol:v3.22.1
+docker.io/calico/node:v3.22.1
+docker.io/calico/kube-controllers:v3.22.1
+)
+for pullimageName in ${images[@]} ; do
+docker pull $pullimageName
+done
+
 ```
 
 
@@ -163,11 +243,7 @@ kubeadm init \
 
 
 
-
-
-
-
-
+yum remove -y kubelet kubeadm kubectl
 
 
 
