--- a/笔记/k8s/1.k8s安装.md
+++ b/笔记/k8s/1.k8s安装.md
@@ -236,7 +236,19 @@ done
 
 
 
+#### 下载dashboard镜像
+```text
+pull_calico_dashboard.sh
 
+#!/bin/bash
+images=(
+kubernetesui/dashboard:v2.5.1
+kubernetesui/metrics-scraper:v1.0.7
+)
+for pullimageName in ${images[@]} ; do
+docker pull $pullimageName
+done
+```
 
 
 
