--- a/笔记/docker/1.Docker安装.md
+++ b/笔记/docker/1.Docker安装.md
@@ -49,12 +49,9 @@ vi /etc/docker/daemon.json
 }
 ```
 
-重载所有修改过的配置文件
-```shell
+重载所有修改过的配置文件 重新启动Docker服务
+```shell 
 systemctl daemon-reload
-```
-重新启动Docker服务
-```shell
 systemctl restart docker
 ```
 
