--- a/笔记/k8s/1.k8s安装.md
+++ b/笔记/k8s/1.k8s安装.md
@@ -238,7 +238,7 @@ done
 
 #### 下载dashboard镜像
 ```text
-pull_calico_dashboard.sh
+pull_dashboard.sh
 
 #!/bin/bash
 images=(
@@ -255,7 +255,16 @@ done
 
 
 
-yum remove -y kubelet kubeadm kubectl
+#########################################        
+```text
+
+kubeadm reset
+
+yum remove -y kubelet* kubeadm* kubectl* docker* 
+
+rm -rf /etc/kubernetes/
+
+```
 
 
 
