--- a/笔记/k8s/1.k8s安装.md
+++ b/笔记/k8s/1.k8s安装.md
@@ -95,7 +95,9 @@ systemctl enable docker
 
 vi /etc/docker/daemon.json
 {
-"registry-mirrors": ["http://hub-mirror.c.163.com","https://registry.docker-cn.com","https://kxv08zer.mirror.aliyuncs.com"]
+  "registry-mirrors": ["http://192.168.118.8:8081/repository/docker_group","https://registry.docker-cn.com","https://kxv08zer.mirror.aliyuncs.com"],
+  "insecure-registries": ["192.168.118.8"],
+  "exec-opts": ["native.cgroupdriver=systemd"]
 }
 
 systemctl daemon-reload
@@ -203,6 +205,8 @@ node2    NotReady   <none>                 2m53s   v1.23.16
 ```text
 #查看pod 网段
 cat /etc/kubernetes/manifests/kube-controller-manager.yaml | grep cluster-cidr=
+
+
 
 #把calico.yaml里pod所在网段改成kubeadm init时选项--pod-network-cidr所指定的网段，
 ########################### 修改calico.yaml文件
