--- a/笔记/docker/1.Docker安装.md
+++ b/笔记/docker/1.Docker安装.md
@@ -45,7 +45,9 @@ docker ps -a
 
 vi /etc/docker/daemon.json
 {
-"registry-mirrors": ["http://hub-mirror.c.163.com","https://registry.docker-cn.com","https://kxv08zer.mirror.aliyuncs.com"]
+  "registry-mirrors": ["http://192.168.118.8:8081/repository/docker_group","https://registry.docker-cn.com","https://kxv08zer.mirror.aliyuncs.com"],
+  "insecure-registries": ["192.168.118.8"],
+  "exec-opts": ["native.cgroupdriver=systemd"]
 }
 ```
 
