--- a/笔记/k8s/1.k8s安装.md
+++ b/笔记/k8s/1.k8s安装.md
@@ -60,6 +60,31 @@ sudo sysctl --system
 
 ```
 
+#### ipset ipvsadm  ipvsadm配置
+```text
+
+yum install -y ipset ipvsadm
+
+##########################
+cat > /etc/sysconfig/modules/ipvs.modules <<EOF
+#!/bin/bash
+modprobe -- ip_vs
+modprobe -- ip_vs_rr
+modprobe -- ip_vs_wrr
+modprobe -- ip_vs_sh
+modprobe -- nf_conntrack
+EOF
+
+chmod 755 /etc/sysconfig/modules/ipvs.modules
+bash /etc/sysconfig/modules/ipvs.modules 
+lsmod | grep -e ip_vs -e nf_conntrack
+
+
+```
+
+
+
+
 
 #### 修改 docker源：
 ```text
