--- a/笔记/docker/1.Docker安装.md
+++ b/笔记/docker/1.Docker安装.md
@@ -45,14 +45,14 @@ docker ps -a
 
 vi /etc/docker/daemon.json
 {
-  "registry-mirrors": ["http://192.168.118.8:8081/repository/docker_group","https://registry.docker-cn.com","https://kxv08zer.mirror.aliyuncs.com"],
+  "registry-mirrors": ["http://192.168.118.8","http://hub-mirror.c.163.com","https://registry.docker-cn.com","https://kxv08zer.mirror.aliyuncs.com"],
   "insecure-registries": ["192.168.118.8"],
   "exec-opts": ["native.cgroupdriver=systemd"]
 }
 ```
 
 重载所有修改过的配置文件 重新启动Docker服务
-```shell 
+```shell
 systemctl daemon-reload
 systemctl restart docker
 ```
