--- a/笔记/k8s/1.k8s安装.md
+++ b/笔记/k8s/1.k8s安装.md
@@ -82,7 +82,20 @@ lsmod | grep -e ip_vs -e nf_conntrack
 
 ```
 
+**********************************************************   安装容器运行时   k8s < 1.24 忽略
+```text
+https://github.com/Mirantis/cri-dockerd
+下载: 0.3.2 rpm
+开机自启
+systemctl enable cri-docker
 
+vi /usr/lib/systemd/system/cri-docker.service  # 修改如下
+ExecStart=/usr/bin/cri-dockerd --network-plugin=cni --pod-infra-container-image=registry.aliyuncs.com/google_containers/pause:3.9 --container-runtime-endpoint fd://
+
+systemctl start cri-docker && systemctl enable cri-docker
+
+```
+**********************************************************
 
 
 
@@ -136,6 +149,17 @@ systemctl restart docker
 ```text
 yum install -y kubelet-1.23.16-0 kubeadm-1.23.16-0 kubectl-1.23.16-0 --disableexcludes=kubernetes
 sudo systemctl enable --now kubelet
+
+**********************************************************
+yum install -y kubelet-1.27.1-0 kubeadm-1.27.1-0 kubectl-1.27.1-0
+
+vi /etc/sysconfig/kubelet
+KUBELET_EXTRA_ARGS="--cgroup-driver=systemd"
+
+sudo systemctl enable --now kubelet
+
+kubeadm reset --cri-socket=unix:///var/run/cri-dockerd.sock
+
 ```
 
 #### 拉取docker 镜像
@@ -163,6 +187,23 @@ done
 # 执行脚本拉取镜像
 sh pull_images.sh
 
+=============================================
+
+#!/bin/bash
+images=(
+registry.aliyuncs.com/google_containers/kube-apiserver:v1.27.1
+registry.aliyuncs.com/google_containers/kube-controller-manager:v1.27.1
+registry.aliyuncs.com/google_containers/kube-scheduler:v1.27.1
+registry.aliyuncs.com/google_containers/kube-proxy:v1.27.1
+registry.aliyuncs.com/google_containers/pause:3.9
+registry.aliyuncs.com/google_containers/etcd:3.5.7-0
+registry.aliyuncs.com/google_containers/coredns:v1.10.1
+)
+for pullimageName in ${images[@]} ; do
+docker pull $pullimageName
+done
+
+
 
 ```
 
@@ -188,6 +229,18 @@ kubeadm init \
   --pod-network-cidr=10.244.0.0/16 \
   --ignore-preflight-errors=all
 
+*************************************************
+
+kubeadm init \
+  --apiserver-advertise-address=192.168.118.24 \
+  --image-repository registry.aliyuncs.com/google_containers \
+  --kubernetes-version v1.27.1 \
+  --service-cidr=10.96.0.0/12 \
+  --pod-network-cidr=10.244.0.0/16 \
+  --ignore-preflight-errors=all \
+  --cri-socket unix:///var/run/cri-dockerd.sock
+
+*************************************************
 
 mkdir -p $HOME/.kube
 sudo cp -i /etc/kubernetes/admin.conf $HOME/.kube/config
