--- a/笔记/k8s/1.k8s安装.md
+++ b/笔记/k8s/1.k8s安装.md
@@ -222,9 +222,9 @@ done
 
 
 kubeadm init \
-  --apiserver-advertise-address=192.168.118.18 \
-  --image-repository registry.aliyuncs.com/google_containers \
-  --kubernetes-version v1.23.0 \
+  --apiserver-advertise-address=192.168.118.21 \
+  --image-repository 192.168.118.8/google_containers \
+  --kubernetes-version v1.23.17 \
   --service-cidr=10.96.0.0/12 \
   --pod-network-cidr=10.244.0.0/16 \
   --ignore-preflight-errors=all
