--- a/笔记/k8s/1.k8s安装.md
+++ b/笔记/k8s/1.k8s安装.md
@@ -279,65 +279,45 @@ node2    NotReady   <none>                 2m53s   v1.23.16
  
 ```
 
-#### 部署容器网络 （master执行）
+#################################################################### 部署容器网络 （master执行）    calico  官网
 ```text
 #查看pod 网段
 cat /etc/kubernetes/manifests/kube-controller-manager.yaml | grep cluster-cidr=
 
+kubectl create -f  tigera-operator.yaml
+kubectl create -f  custom-resources.yaml
 
+# 查看是否 在running 状态
 
-#把calico.yaml里pod所在网段改成kubeadm init时选项--pod-network-cidr所指定的网段，
-########################### 修改calico.yaml文件
+kubectl get pods -A
 
-# 修改网段
-- name: CALICO_IPV4POOL_CIDR      #此处
-  value: "10.244.0.0/16"	
+kubectl get nodes -o wide
 
-# 修改网卡
-  - name: IP_AUTODETECTION_METHOD
-    value: "interface=ens33"
+kubectl get nodes,svc -o wide
 
 ```
 
-#### 下载镜像
+node 节点为加入集群
 ```text
-pull_calico_images.sh
 
-#!/bin/bash
-images=(
-docker.io/calico/cni:v3.22.1
-docker.io/calico/pod2daemon-flexvol:v3.22.1
-docker.io/calico/node:v3.22.1
-docker.io/calico/kube-controllers:v3.22.1
-)
-for pullimageName in ${images[@]} ; do
-docker pull $pullimageName
-done
 
 ```
 
+##################################################################      安装web页面管理
 
-
-#### 下载dashboard镜像
 ```text
-pull_dashboard.sh
 
-#!/bin/bash
-images=(
-kubernetesui/dashboard:v2.5.1
-kubernetesui/metrics-scraper:v1.0.7
-)
-for pullimageName in ${images[@]} ; do
-docker pull $pullimageName
-done
+
+kubectl apply -f recommended.yaml
+
+
 ```
 
 
 
 
 
-
-#########################################        
+#########################################          卸载
 ```text
 
 kubeadm reset
