--- a/笔记/k8s/2.基础知识和常用命令.md
+++ b/笔记/k8s/2.基础知识和常用命令.md
@@ -1,5 +1,39 @@
-### namespace
 
+### 证书
+```text
+
+
+```
+
+### namespace
+```text
+
+
+
+```
+
+### 节点
+```text
+#查看节点
+kubectl get nodes
+
+#删除节点为
+kubectl delete node  <nodeName>
+
+#添加节点
+#添加 master 节点
+    第一步: master节点操作、生成token
+        kubeadm token create
+    第二步: node 节点操作 加入集群的
+        sudo kubeadm join <master-ip>:<master-port> --token <token> --discovery-token-ca-cert-hash <ca-cert-hash>
+        
+#添加 worker 节点
+    第一步: master节点操作、生成token
+        kubeadm token create
+    第二步: node 节点操作 加入集群的
+        sudo kubeadm join <master-ip>:<master-port> --token <token> --discovery-token-ca-cert-hash <ca-cert-hash>
+
+```
 
 
 ### pod
@@ -7,15 +41,26 @@
 
 kubectl get pods -A
 
-
-kubectl get nodes
-
+kubectl get nodes -n <namespaceName>****
 
 kubectl logs <podsName> -n <namespaceName>
-
 
 kubectl describe pod <pod-name> -n <namespaceName>
 
 kubectl delete pod <pod-name>
+
+```
+
+
+
+### 事件
+```text
+#查看事件
+kubectl get events -A
+
+kubectl get events -n <namespaceName>
+
+
+
 
 ```
