--- a/笔记/k8s/2.基础知识和常用命令.md
+++ b/笔记/k8s/2.基础知识和常用命令.md
@@ -1,17 +1,4 @@
 
-### 证书
-```text
-
-
-```
-
-### namespace
-```text
-
-
-
-```
-
 ### 节点
 ```text
 #查看节点
@@ -32,6 +19,20 @@ kubectl delete node  <nodeName>
         kubeadm token create
     第二步: node 节点操作 加入集群的
         sudo kubeadm join <master-ip>:<master-port> --token <token> --discovery-token-ca-cert-hash <ca-cert-hash>
+
+```
+
+### 证书
+```text
+
+
+```
+
+### namespace
+```text
+
+kubectl get namespaces
+
 
 ```
 
