--- a/笔记/k8s/2.基础知识和常用命令.md
+++ b/笔记/k8s/2.基础知识和常用命令.md
@@ -30,8 +30,22 @@ kubectl delete node  <nodeName>
 
 ### namespace
 ```text
-
+# 查看所有
 kubectl get namespaces
+
+# 查看定义文件
+kubectl get namespace <namespace-name> -o yaml
+
+# 删除
+kubectl delete namespace <namespace-name>
+
+# 创建
+
+apiVersion: v1
+kind: Namespace
+metadata:
+  name: my-namespace
+
 
 
 ```
