--- a/笔记/k8s/1.k8s安装.md
+++ b/笔记/k8s/1.k8s安装.md
@@ -133,7 +133,7 @@ systemctl enable docker
 
 vi /etc/docker/daemon.json
 {
-  "registry-mirrors":["http://192.168.118.8:8081/repository/docker_group","https://registry.docker-cn.com","https://kxv08zer.mirror.aliyuncs.com"],
+  "registry-mirrors":["http://192.168.118.8","https://registry.docker-cn.com","https://kxv08zer.mirror.aliyuncs.com"],
   "insecure-registries":["192.168.118.8"],
   "exec-opts":["native.cgroupdriver=systemd"]
 }
@@ -147,7 +147,7 @@ systemctl restart docker
 
 #### 6.安装kubeadm
 ```text
-yum install -y kubelet-1.23.16-0 kubeadm-1.23.16-0 kubectl-1.23.16-0 --disableexcludes=kubernetes
+yum install -y kubelet-1.23.16-0 kubeadm-1.23.16-0 kubectl-1.23.16-0
 sudo systemctl enable --now kubelet
 
 **********************************************************
@@ -325,6 +325,9 @@ kubeadm reset
 yum remove -y kubelet* kubeadm* kubectl* docker* 
 
 rm -rf /etc/kubernetes/
+rm -rf /var/lib/etcd
+
+
 
 ```
 
