--- a/笔记/k8s/2.基础知识和常用命令.md
+++ b/笔记/k8s/2.基础知识和常用命令.md
@@ -16,9 +16,12 @@ kubectl delete node  <nodeName>
         
 #添加 worker 节点
     第一步: master节点操作、生成token
-        kubeadm token create
+        # 添加worker时，如果不知道令牌信息，可以通过下面的命令重新生成
+        kubeadm token create --print-join-command
     第二步: node 节点操作 加入集群的
         sudo kubeadm join <master-ip>:<master-port> --token <token> --discovery-token-ca-cert-hash <ca-cert-hash>
+
+
 
 ```
 
