--- a/笔记/k8s/2.基础知识和常用命令.md
+++ b/笔记/k8s/2.基础知识和常用命令.md
@@ -42,13 +42,14 @@ kubectl get namespace <namespace-name> -o yaml
 # 删除
 kubectl delete namespace <namespace-name>
 
-# 创建
 
+
+
+#================= 创建
 apiVersion: v1
 kind: Namespace
 metadata:
-  name: my-namespace
-
+  name: <my-namespace>
 
 
 ```
@@ -67,7 +68,47 @@ kubectl describe pod <pod-name> -n <namespaceName>
 
 kubectl delete pod <pod-name>
 
+
+### 创建
+1. 
+kubectl run mynginx --image=nginx
+
+2.
+apiVersion: v1
+kind: Pod
+metadata:
+  labels:
+    <label>: <value>
+    <label>: <value>
+  name: <pod-name>
+  namespace: <namespace>
+spec:
+  containers:
+  - image: <image>
+    name: <containers-name>
+
+
+
 ```
+
+### Deployment
+
+
+### 创建
+kubectl create deployment mytomcat --image=tomcat:8.5.68 --replicas=3
+
+
+### Service
+
+
+### ClusterIP
+
+
+### NodePort
+
+### Ingress
+
+### 存储抽象
 
 
 
