--- a/笔记/k8s/3.kubesphere安装.md
+++ b/笔记/k8s/3.kubesphere安装.md
@@ -1,12 +1,36 @@
 
+##master 节点操作
 
-安装默认store
+```shell
+
+## 查污点
+kubectl describe node master | grep Taints
+## 删除污点
+kubectl taint nodes master node-role.kubernetes.io/master:NoSchedule-
+
+
+kubectl apply -f storageClass.yaml
+
+# 安装 openebs
+kubectl apply -f openebs-operator.yaml
+
+# 安装
+kubectl apply -f kubesphere-installer.yaml
+kubectl apply -f cluster-configuration.yaml
+
+# 查看日志
+kubectl logs -n kubesphere-system $(kubectl get pod -n kubesphere-system -l 'app in (ks-install, ks-installer)' -o jsonpath='{.items[0].metadata.name}') -f
 
 
 
+```
 
 
 
+## 访问
+```shell
 
 
+
+```
 
