--- a/笔记/k8s/3.kubesphere安装.md
+++ b/笔记/k8s/3.kubesphere安装.md
@@ -7,6 +7,8 @@
 kubectl describe node master | grep Taints
 ## 删除污点
 kubectl taint nodes master node-role.kubernetes.io/master:NoSchedule-
+## 添加污点
+kubectl taint nodes master node-role.kubernetes.io/master:NoSchedule
 
 
 kubectl apply -f storageClass.yaml
