--- a/科学知识/高中/物理.md
+++ b/科学知识/高中/物理.md
@@ -2,4 +2,48 @@
 
 
 
+电学
+```text
+
+一、 能量
+        热能、机械能
+
+二、 信号
+        模拟信息号
+            电流
+            电压
+        数字信号
+            电压
+            
+
+
+
+
+
+
+
+
+==============================================
+电子元件
+    电阻、电容、电感、
+
+
+
+
+
+电路定律
+    基尔霍夫定律（电流、电压）
+
+
+
+
+
+
+
+```
+
+
+
+
+
 
