--- a/笔记/k8s/2.基础知识和常用命令.md
+++ b/笔记/k8s/2.基础知识和常用命令.md
@@ -64,6 +64,17 @@ kubectl delete node  <nodeName>
 
 ### 证书
 ```text
+# 查看密钥列表
+    kubectl get secret -n kube-system
+
+# 查看密钥详情
+    kubectl get secret -n kube-system <密钥名>  -oyaml
+    过期字段：  expiration
+    
+# base64 解码
+    echo "编码的字符串" | base64 --decode
+
+
 
 
 ```
@@ -104,9 +115,9 @@ metadata:
 # 查看详情
     kubectl describe pod <pod-name> -n <namespaceName>
 # 删除 pod
-    kubectl delete pod <pod-name>
+    kubectl delete pod <pod-name> -n <namespaceName>
     强制删除
-    kubectl delete pod <pod-name> --grace-period=0 --force
+    kubectl delete pod <pod-name> -n <namespaceName> --grace-period=0 --force
 
 
 ######## 创建
@@ -147,6 +158,10 @@ kubectl create deployment mytomcat --image=tomcat:8.5.68 --replicas=3
 ### NodePort
 
 ### Ingress
+    1. 启用网关
+    2. 配置应用路由
+
+
 
 ### 存储抽象
 
