--- a/笔记/k8s/3.kubesphere安装.md
+++ b/笔记/k8s/3.kubesphere安装.md
@@ -31,8 +31,9 @@ kubectl logs -n kubesphere-system $(kubectl get pod -n kubesphere-system -l 'app
 
 ## 访问
 ```shell
-
-
+http://192.168.118.9:30880
+Account: admin
+Password: P@88w0rd
 
 ```
 
