--- a/笔记/直播平台搭建过程/1.安装nginx_rtmp推流服务器.md
+++ b/笔记/直播平台搭建过程/1.安装nginx_rtmp推流服务器.md
@@ -16,7 +16,7 @@ yum -y install gcc gcc-c++ make pcre-devel zlib-devel openssl-devel
 安装nginx
     cd nginx-1.24.0
     ./configure --add-module=../rtmp-module
-    make make install
+    make & make install
 
 启动服务
    cd /usr/local/nginx/sbin
