--- a/笔记/自动化测试/1环境安装.md
+++ b/笔记/自动化测试/1环境安装.md
@@ -1,5 +1,5 @@
-##  环境将血
-
+##  环境搭建
+    appium
 
 1. 内容
 ```text
@@ -7,6 +7,8 @@
     1. python 环境
     2. 代码编写工具
     3. 手机或模拟器
+        打开开发者模式
+        打开usb调试
     4. adb
            adb 下载地址： https://developer.android.google.cn/studio/releases/platform-tools?hl=zh-cn
            配置adb path环境变量
