--- a/笔记/单片机/1.1环境搭建.md
+++ b/笔记/单片机/1.1环境搭建.md
@@ -26,14 +26,14 @@
 ```text
 4.添加头文件
 ```
-![img.png](img/img3.png)
+![img.png](../../stm32/img/img3.png)
 
 ```text
 5.定义 宏
 ```
-![img.png](img/img1.png)
+![img.png](../../stm32/img/img1.png)
 
 ```text
 6.修改编译工具
 ```
-![img.png](img/img2.png)
+![img.png](../../stm32/img/img2.png)
